--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,10 +9,10 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#00bcd4" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Best way to keep track of your debts."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
